deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-collection-service
  namespace: default
  labels:
    app.kubernetes.io/name: web-collection
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8787
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: web-collection
    app.kubernetes.io/component: api
